Make sure the run date is readable (#45)

--- a/server/public/css/extra.css
+++ b/server/public/css/extra.css
@@ -16,3 +16,6 @@ footer {
   color: #d3d3d3;
   font-weight: 700;
 }
+td.run-date {
+  white-space: nowrap;
+}
